--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       MONGO_INITDB_ROOT_USERNAME: BaMMI
       MONGO_INITDB_ROOT_PASSWORD: 1337
     volumes:
-      - ./BaMMI/storage:/home/BaMMI/storage
+      - shared_storage:/home/BaMMI/storage
 
   rabbitmq:
     image: rabbitmq:3
@@ -37,7 +37,7 @@ services:
       - rabbitmq
       - parser
     volumes:
-      - ./BaMMI/storage:/home/BaMMI/storage
+      - shared_storage:/home/BaMMI/storage
 
   parser:
     build:
@@ -50,7 +50,7 @@ services:
       - rabbitmq
       - saver
     volumes:
-      - ./BaMMI/storage:/home/BaMMI/storage
+      - shared_storage:/home/BaMMI/storage
 
   saver:
     build:
@@ -64,5 +64,7 @@ services:
       - rabbitmq
       - mongo
     volumes:
-      - ./BaMMI/storage:/home/BaMMI/storage
+      - shared_storage:/home/BaMMI/storage
 
+volumes:
+  shared_storage:
