--- a/BaMMI/saver/Dockerfile.Saver
+++ b/BaMMI/saver/Dockerfile.Saver
@@ -8,4 +8,4 @@ RUN pip install -r requirements.txt
 COPY ./BaMMI/utils ./BaMMI/utils/
 COPY ./BaMMI/saver ./BaMMI/saver/
 
-CMD ["python", "-m", "BaMMI.saver", '-t', "run-saver", "mongodb://BaMMI:1337@mongo:27017", "rabbitmq://rabbitmq:5672"]
+CMD ["python", "-m", "BaMMI.saver", "-t", "run-saver", "mongodb://BaMMI:1337@mongo:27017", "rabbitmq://rabbitmq:5672"]
