--- a/BaMMI/server/Dockerfile.Server
+++ b/BaMMI/server/Dockerfile.Server
@@ -8,4 +8,4 @@ RUN pip install -r requirements.txt
 COPY ./BaMMI/utils ./BaMMI/utils/
 COPY ./BaMMI/server ./BaMMI/server/
 
-CMD ["python", "-m", "BaMMI.server", '-t', "run-server", "-h", "0.0.0.0"]
+CMD ["python", "-m", "BaMMI.server", "-t", "run-server", "-h", "0.0.0.0"]
