--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,3 +65,15 @@ services:
       - mongo
     volumes:
       - ./BaMMI/storage:/usr/src/BaMMI/BaMMI/storage
+
+  api:
+    build:
+      context: .
+        dockerfile: BaMMI/saver/Dockerfile.API
+        restart: on-failure
+        links:
+          - mongo
+        depends_on:
+          - mongo
+        volumes:
+          - ./BaMMI/storage:/usr/src/BaMMI/BaMMI/storage
